# video_transcription

./: .gitignore  CMakeLists.txt  DEPENDENCIES.txt  Makefile  README.md  README.txt  hazelcast-client.hpp  main.cpp  speech_processing.cpp  speech_processing.hpp  transcriber.cpp  transcriber.hpp  transcription.cpp  transcription.hpp  transcription.txt  utils.cpp  video_handler.hpp  video_management.cpp  video_management.hpp
models/: download-ggml-model.sh
modules/: actions.cpp  actions.hpp  speech_processing.cpp  speech_processing.hpp  transcriber.cpp  transcriber.hpp  utils.cpp  utils.hpp  video_handler.cpp
